# awesome

./: Cargo.toml  README.md
examples/async-ex/: Cargo.toml
examples/async-pg/: .env  Cargo.toml  README.md
examples/async-pg/sql/: schema.sql
examples/async-pg/src/: main.rs
examples/async-sqlite/: Cargo.toml  README.md
examples/async-sqlite/src/: db.rs
examples/async-web-client/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/basic/static/: 404.html  welcome.html
examples/error_handle/: Cargo.toml
examples/form/: Cargo.toml
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/http-proxy/: Cargo.toml
examples/http-proxy/src/: main.rs
examples/json/: Cargo.toml  README.md
examples/json/src/: main.rs
examples/json_error/: Cargo.toml
examples/jsonrpc/: Cargo.toml  README.md
examples/juniper/: Cargo.toml
examples/multipart/: Cargo.toml  README.md
examples/multipart/src/: main.rs
examples/r2d2/: Cargo.toml  test.db
examples/r2d2/src/: main.rs
examples/run-in-thread/: Cargo.toml
examples/rustls/: Cargo.toml
examples/rustls/src/: main.rs
examples/server-sent-event/: Cargo.toml
examples/server-sent-event/src/: index.html  main.rs
examples/state/: Cargo.toml
examples/state/src/: main.rs
examples/static_index/: Cargo.toml
examples/static_index/src/: main.rs
examples/template_tera/: Cargo.toml
examples/template_tera/src/: main.rs
examples/unix-socket/: Cargo.toml  README.md
examples/unix-socket/src/: main.rs
examples/web-cors/backend/: Cargo.toml
examples/web-cors/backend/src/: main.rs
examples/web-middleware/: Cargo.toml
examples/web-middleware/src/: main.rs  redirect.rs  simple.rs
kayrx-examples/: .gitignore  Cargo.toml  README.md
kayrx-examples/async-ex/: Cargo.toml  README.md
kayrx-examples/async-ex/src/: appconfig.rs
kayrx-examples/async-ex/src/handlers/: parts.rs  products.rs
kayrx-examples/async-sqlite/: Cargo.toml
kayrx-examples/async-sqlite/src/: main.rs
kayrx-examples/async-web-client/: Cargo.toml  README.md
kayrx-examples/async-web-client/src/: main.rs
kayrx-examples/basic/: Cargo.toml  README.md
kayrx-examples/basic/src/: main.rs
kayrx-examples/basic/static/: 404.html
kayrx-examples/error_handle/: README.md
kayrx-examples/error_handle/src/: main.rs
kayrx-examples/form/: Cargo.toml
kayrx-examples/form/src/: main.rs
kayrx-examples/hello/: Cargo.toml
kayrx-examples/hello/src/: main.rs
kayrx-examples/http-proxy/: Cargo.toml
kayrx-examples/json/: Cargo.toml
kayrx-examples/json_error/src/: main.rs
kayrx-examples/jsonrpc/: Cargo.toml
kayrx-examples/jsonrpc/src/: main.rs
kayrx-examples/juniper/: README.md
kayrx-examples/juniper/src/: main.rs
kayrx-examples/multipart/: Cargo.toml
kayrx-examples/multipart/src/: main.rs
kayrx-examples/run-in-thread/src/: main.rs
kayrx-examples/rustls/: Cargo.toml
kayrx-examples/server-sent-event/: Cargo.toml  README.md
kayrx-examples/static_index/: Cargo.toml
kayrx-examples/template_tera/: README.md
kayrx-examples/template_tera/templates/: index.html  user.html
kayrx-examples/web-cors/: README.md
kayrx-examples/web-cors/backend/src/: user.rs
kayrx-examples/web-middleware/: Cargo.toml  README.md
kayrx-examples/web-middleware/src/: read_request_body.rs  read_response_body.rs
yarx-examples/: README.md
yarx-examples/hello/: Cargo.toml  README.md  imdex.html
yarx-examples/hello/src/: app.rs  lib.rs
