[workspace]
members = [
  "kayrx-examples/async-ex",
  "kayrx-examples/async-sqlite",
  "kayrx-examples/async-web-client",
  "kayrx-examples/basic",
  "kayrx-examples/error_handle",
  "kayrx-examples/form",
  "kayrx-examples/hello",
  "kayrx-examples/http-proxy",
  "kayrx-examples/json",
  "kayrx-examples/json_error",
  "kayrx-examples/jsonrpc",
  "kayrx-examples/juniper",
  "kayrx-examples/multipart",
  "kayrx-examples/r2d2",
  "kayrx-examples/run-in-thread",
  "kayrx-examples/rustls",
  "kayrx-examples/server-sent-event",
  "kayrx-examples/state",
  "kayrx-examples/static_index",
  "kayrx-examples/template_tera",
  "kayrx-examples/unix-socket",
  "kayrx-examples/web-cors/backend",
  "kayrx-examples/web-middleware",
]
