[workspace]
members = [
  "examples/async-ex",
  # "examples/async-sqlite",
  "examples/async-web-client",
  "examples/basic",
  "examples/error_handle",
  "examples/form",
  "examples/hello",
  "examples/http-proxy",
  "examples/json",
  "examples/json_error",
  "examples/jsonrpc",
  "examples/juniper",
  "examples/multipart",
  # "examples/r2d2",
  "examples/run-in-thread",
  "examples/rustls",
  "examples/server-sent-event",
  "examples/state",
  "examples/static_index",
  "examples/template_tera",
  "examples/unix-socket",
  "examples/web-cors/backend",
  "examples/web-middleware",
]
