[workspace]
members = [
  "async-ex",
  "async-sqlite",
  "async-web-client",
  "basic",
  "error_handle",
  "form",
  "hello",
  "http-proxy",
  "json",
  "json_error",
  "jsonrpc",
  "juniper",
  "multipart",
  "run-in-thread",
  "r2d2",
  "rustls",
  "server-sent-event",
  "state",
  "static_index",
  "template_tera",
  "web-cors/backend",
  "web-middleware",
  "unix-socket",
]
