[package]
name = "async-pg"
version = "0.1.0"
authors = ["krircc <krircc@qq.com>"]
edition = "2018"

[dependencies]
kayrx = {git = "https://github.com/kayrx/kayrx"}
kpgres = {git = "https://github.com/kayrx/kpgres"}
keclc-pgpool = {git = "https://github.com/kayrx/keclc"}
config = "0.10.1"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
failure = "0.1.6"