[package]
name = "async-sqlite"
version = "0.2.0"
authors = ["Darin Gordon <dkcdkg@gmail.com>", "krircc <krircc@qq.com>"]
edition = "2018"

[dependencies]
kayrx = "0.8.0"
env_logger = "0.6"
failure = "0.1.1"
futures = "0.3.1"
num_cpus = "1.10.0"
r2d2 = "0.8.2"
r2d2_sqlite = "0.8.0"
rusqlite = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
