[package]
name = "async-web-client"
version = "0.2.0"
authors = ["dowwie <dkcdkg@gmail.com>", "krircc <krircc@qq.com>"]
edition = "2018"

[dependencies]
kayrx = "0.8.0"
futures = "0.3.1"
serde = { version = "1.0.43", features = ["derive"] }
serde_json = "1.0.16"
validator = "0.6.3"
validator_derive = "0.6.5"
env_logger = "0.6"
