[package]
name = "async-ex"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>", "krircc <krircc@qq.com>"]
edition = "2018"

[dependencies]
kayrx = "0.7.0"
bytes = "0.5.3"
env_logger = "0.6.1"
futures = "0.3.1"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "1.0.90"
serde_json = "1.0.39"
time = "0.1.42"
